Parser/test_cases/bad/casenoexpr.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      case of
        d: Object  => 0;
      esac
   };
   
   bar() :Int {
      6
   };
   
   
};
